--- a/Electric_Potential/README.html
+++ b/Electric_Potential/README.html
@@ -274,46 +274,34 @@
       padding-left: 0.5em;
     }
 
-    #display>.section>.block>ol.compact {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
-
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
     }
 
-    #display ol.compact>li {
+    #display>.section>.block>ol.compact {
       margin-top: 0.25em;
       margin-bottom: 0.25em;
     }
 
-    #display ol.loose>li {
-      margin-top: 0.5em;
-      margin-bottom: 0.5em;
-    }
-
-    #display ul.compact li {
+    #display ol.compact p {
       margin-top: 0.25em;
       margin-bottom: 0.25em;
     }
 
-    #display ul.loose li {
-      margin-top: 0.5em;
-      margin-bottom: 0.5em;
+    #display ol.loose p {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
     }
 
-    #display li p {
-      width: 100%;
-      display: block;
+    #display ul.compact p {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
     }
 
-    #display li>.block:first-of-type p {
-      width: 100%;
-      display: block;
-      margin-top: 0em;
-      margin-bottom: 0em;
+    #display ul.loose p {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
     }
 
     .inline-html .block .block-info {
@@ -360,11 +348,11 @@
     }
 
     .solutionsfalse {
-      display: none;
+      display: block;
     }
 
     .solutionstrue {
-      display: block;
+      display: none;
     }
 
     .inline {
@@ -536,9 +524,22 @@
 </head>
 
 <body class="body">
-  <div id="toc" style="display: none;"></div>
+  <div id="toc" style="display: block; min-width: 5em;">
+    <ol>
+      <li>
+        <a href="#fall-2022" raw="# Fall, 2022" lo="1" class="highlighted">
+          <span class="toctext">Fall, 2022</span>
+        </a>
+      </li>
+    </ol>
+  </div>
   <div id="display">
     <div class="section">
+    </div>
+    <div class="section">
+      <div class="block">
+        <h1 class="highlighted"><a name="fall-2022" number="1" class="hanchor" href="#fall-2022"><span class="hnumber">1</span>&nbsp;<span class="htext">Fall, 2022</span></a></h1>
+      </div>
       <div class="block">
         <ol class="compact">
           <li markerlength="3" padlength="0">
@@ -546,12 +547,15 @@
               <p padlength="0">The parts on “the work you do” should be removed. It is difficult to explain how you do negative work, and one runs into many complications (see references).</p>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="3" lf="4" class="active">
+          <li markerlength="3" padlength="0" lo="4" lf="6">
             <div class="block">
               <p padlength="0">In 1.1, students find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span></span></span></span> and then find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord">Δ</span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span> using <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7667em;vertical-align:-0.0833em;"></span><span class="mord">−</span><span class="mord">Δ</span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span>. In 2.1, they are given a formula for <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span> and then use it to find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span></span></span></span>. Can we be consistent? Perhaps a section on the integration for both cases?</p>
             </div>
           </li>
         </ol>
+      </div>
+      <div class="block">
+        <p padlength="0" class=""><strong type="md">References</strong></p>
       </div>
       <div class="block">
         <ul class="compact">
@@ -560,22 +564,22 @@
               <p padlength="0"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1392548/pdf/jphysiol01441-0129.pdf">THE PHYSIOLOGICAL COST OF NEGATIVE WORK</a></p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="6" lf="6">
+          <li markerlength="2" padlength="0" lo="9" lf="9">
             <div class="block">
               <p padlength="0"><a href="https://aapt.scitation.org/doi/pdf/10.1119/1.13173">Pseudowork and real work</a></p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="7" lf="7">
+          <li markerlength="2" padlength="0" lo="10" lf="10">
             <div class="block">
               <p padlength="0"><a href="https://aapt.scitation.org/doi/10.1119/1.5109519">A unified, contemporary approach to teaching energy in introductory physics</a></p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="8" lf="8">
+          <li markerlength="2" padlength="0" lo="11" lf="11">
             <div class="block">
               <p padlength="0"><a href="https://aapt.scitation.org/doi/pdf/10.1119/1.16878">All about work</a></p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="9" lf="12">
+          <li markerlength="2" padlength="0" lo="12" lf="15">
             <div class="block">
               <p padlength="0">Energy and the confused student <a href="https://aapt.scitation.org/doi/pdf/10.1119/1.2823999">1</a>
                 <a href="https://aapt.scitation.org/doi/pdf/10.1119/1.2834527">2</a>
