--- a/index.html
+++ b/index.html
@@ -551,32 +551,32 @@
             </a>
           </li>
           <li>
-            <a href="#continuous-charge-distributions" raw="## Continuous Charge Distributions" lo="52">
+            <a href="#continuous-charge-distributions" raw="## Continuous Charge Distributions" lo="52" class="">
               <span class="toctext">Continuous Charge Distributions</span>
             </a>
           </li>
           <li>
-            <a href="#electric-flux" raw="## Electric Flux" lo="60">
+            <a href="#electric-flux" raw="## Electric Flux" lo="60" class="" lf="60">
               <span class="toctext">Electric Flux</span>
             </a>
           </li>
           <li>
-            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="66">
+            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="66" lf="66" class="highlighted">
               <span class="toctext">Enclosed Charge</span>
             </a>
           </li>
           <li>
-            <a href="#electric-potential" raw="## Electric Potential" lo="72">
+            <a href="#electric-potential" raw="## Electric Potential" lo="72" lf="72" class="">
               <span class="toctext">Electric Potential</span>
             </a>
           </li>
           <li>
-            <a href="#capacitance" raw="## Capacitance" lo="78">
+            <a href="#capacitance" raw="## Capacitance" lo="78" lf="78" class="">
               <span class="toctext">Capacitance</span>
             </a>
           </li>
           <li>
-            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="84" class="highlighted">
+            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="84" class="" lf="84">
               <span class="toctext">Kirchhoff’s Circuit Laws</span>
             </a>
           </li>
@@ -697,37 +697,28 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="continuous-charge-distributions" number="3.3" class="hanchor" href="#continuous-charge-distributions"><span class="hnumber">3.3</span>&nbsp;<span class="htext">Continuous Charge Distributions</span></a></h2>
+        <h2 class=""><a name="continuous-charge-distributions" number="3.3" class="hanchor" href="#continuous-charge-distributions"><span class="hnumber">3.3</span>&nbsp;<span class="htext">Continuous Charge Distributions</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
           <li markerlength="2" padlength="0">
             <div class="block">
-              <p padlength="0"><a href="https://github.com/rweigel/phys260/tree/master/Continuous_Charge_Distributions">Activity</a></p>
+              <p padlength="0"><a href="https://github.com/rweigel/phys260/tree/master/Continuous_Charge_Distributions/README.md">Instructor Notes</a> </p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="55" lf="55">
+          <li markerlength="2" padlength="0" lo="56" lf="56">
             <div class="block">
-              <p padlength="0">Setting up and solving for the electric field due to a finite line of charge.</p>
+              <p padlength="0">Documents: | <a href="Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf">pdf</a> | <a href="Continuous_Charge_Distributions/Continuous_Charge_Distributions-solutions.pdf">pdf solns</a> |</p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="56" lf="60">
+          <li markerlength="2" padlength="0" lo="57" lf="57">
             <div class="block">
-              <p padlength="0">Covered in</p>
+              <p padlength="0">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Continuous_Charge_Distributions">Github</a> | <a href="Continuous_Charge_Distributions/Continuous_Charge_Distributions.md">Markdown</a> | </p>
             </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="58" lf="58">
             <div class="block">
-              <ul class="compact">
-                <li markerlength="2" padlength="2">
-                  <div class="block">
-                    <p padlength="0"><a href="https://drive.google.com/file/d/1JS_pBuNEwXdz9IzpSBFPJffgVacZmqN7/view?usp=sharing_remove_">Section 21.5 of Young and Freedman 2015, 14th Edition</a> and</p>
-                  </div>
-                </li>
-                <li markerlength="2" padlength="2" lo="58" lf="60">
-                  <div class="block">
-                    <p padlength="0"><a href="https://openpress.usask.ca/physics155/chapter/1-5-calculating-electric-fields-of-charge-distributions/">Section 1.5 of Introduction to Electricity, Magnetism, and Circuits by Ling et al.</a></p>
-                  </div>
-                </li>
-              </ul>
+              <p padlength="0">Covered in <a href="https://drive.google.com/file/d/1JS_pBuNEwXdz9IzpSBFPJffgVacZmqN7/view?usp=sharing_remove_">Section 21.5</a> of Young and Freedman 2015, 14th Edition and <a href="https://openpress.usask.ca/physics155/chapter/1-5-calculating-electric-fields-of-charge-distributions/">Section 1.5</a> of Introduction to Electricity, Magnetism, and Circuits by Ling et al.</p>
             </div>
           </li>
         </ul>
@@ -735,7 +726,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="electric-flux" number="3.4" class="hanchor" href="#electric-flux"><span class="hnumber">3.4</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
+        <h2 class=""><a name="electric-flux" number="3.4" class="hanchor" href="#electric-flux"><span class="hnumber">3.4</span>&nbsp;<span class="htext">Electric Flux</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -746,12 +737,12 @@
           </li>
           <li markerlength="2" padlength="0" lo="63" lf="63">
             <div class="block">
-              <p padlength="0">Documents: | <a href="Enclosed_Charge/Electric_Flux.pdf">pdf</a> | <a href="Capacitance/Electric_Flux-solutions.pdf">pdf solns</a> |</p>
+              <p padlength="0">Documents: | <a href="Electric_Flux/Electric_Flux.pdf">pdf</a> | <a href="Electric_Flux/Electric_Flux-solutions.pdf">pdf solns</a> |</p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="64" lf="66">
+          <li markerlength="2" padlength="0" lo="64" lf="64">
             <div class="block">
-              <p padlength="0">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Github</a> | <a href="Electric_Flux/Electric_Flux.html" target="_blank">Markdown</a> | </p>
+              <p padlength="0">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Electric_Flux">Github</a> | <a href="Electric_Flux/Electric_Flux.md">Markdown</a> | </p>
             </div>
           </li>
         </ul>
@@ -759,7 +750,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="enclosed-charge" number="3.5" class="hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
+        <h2 class="highlighted"><a name="enclosed-charge" number="3.5" class="hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -783,7 +774,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="electric-potential" number="3.6" class="hanchor" href="#electric-potential"><span class="hnumber">3.6</span>&nbsp;<span class="htext">Electric Potential</span></a></h2>
+        <h2 class=""><a name="electric-potential" number="3.6" class="hanchor" href="#electric-potential"><span class="hnumber">3.6</span>&nbsp;<span class="htext">Electric Potential</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -807,7 +798,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2><a name="capacitance" number="3.7" class="hanchor" href="#capacitance"><span class="hnumber">3.7</span>&nbsp;<span class="htext">Capacitance</span></a></h2>
+        <h2 class=""><a name="capacitance" number="3.7" class="hanchor" href="#capacitance"><span class="hnumber">3.7</span>&nbsp;<span class="htext">Capacitance</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -831,7 +822,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class="highlighted"><a name="kirchhoff-s-circuit-laws" number="3.8" class="hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">3.8</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
+        <h2 class=""><a name="kirchhoff-s-circuit-laws" number="3.8" class="hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">3.8</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -845,9 +836,14 @@
               <p padlength="0">Document: | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws.pdf">pdf</a> | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf">pdf solns</a> |</p>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="88" lf="89">
+          <li markerlength="2" padlength="0" lo="88" lf="88">
             <div class="block">
-              <p padlength="0">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws.html" target="_blank">Markdown</a> | </p>
+              <p padlength="0">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws.md">Markdown</a> | </p>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="89" lf="89">
+            <div class="block">
+              <p padlength="0">See also <a href="https://pressbooks.online.ucf.edu/osuniversityphysics2/chapter/kirchhoffs-rules/">Section 10.5 of University Physics Volume 2 by Ling et al.</a></p>
             </div>
           </li>
         </ul>
