--- a/Lorentz_Force/README.html
+++ b/Lorentz_Force/README.html
@@ -499,52 +499,25 @@
 </head>
 
 <body class="body">
-  <div id="toc" style="min-width: 5em;">
-    <ol>
-      <li>
-        <a href="#fall-2022" raw="# Fall, 2022" lo="1" class="">
-          <span class="toctext">Fall, 2022</span>
-        </a>
-      </li>
-    </ol>
-  </div>
+  <div id="toc" style="display: none;"></div>
   <div id="display">
     <div class="section">
-    </div>
-    <div class="section">
       <div class="block">
-        <h1 class=""><a name="fall-2022" class="anchor hanchor" href="#fall-2022"><span class="hnumber">1</span>&nbsp;<span class="htext">Fall, 2022</span></a></h1>
+        <p class="">TODO:</p>
       </div>
       <div class="block">
         <ol class="compact">
           <li markerlength="3">
             <div class="block">
-              <p>The parts on “the work you do” should be removed. It is difficult to explain how you do negative work, and one runs into many complications (see references).</p>
+              <p>Discuss what happens when charge is negative.</p>
             </div>
           </li>
-          <li markerlength="3" lo="4" lf="6">
+          <li markerlength="3" lo="4" lf="4">
             <div class="block">
-              <p>In 1.1, students find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span></span></span></span> and then find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord">Δ</span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span> using <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7667em;vertical-align:-0.0833em;"></span><span class="mord">−</span><span class="mord">Δ</span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span>. In 2.1, they are given a formula for <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.10903em;">U</span></span></span></span> and then use it to find <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8413em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span></span></span></span></span></span></span></span>. Can we be consistent? Perhaps a section on the integration for both cases?</p>
+              <p>Discuss point of computing magnitude using <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mop">sin</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">ϕ</span></span></span></span>.</p>
             </div>
           </li>
         </ol>
-      </div>
-      <div class="block">
-        <p class=""><strong>References</strong></p>
-      </div>
-      <div class="block">
-        <ul class="compact">
-          <li markerlength="2">
-            <div class="block">
-              <p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1392548/pdf/jphysiol01441-0129.pdf">THE PHYSIOLOGICAL COST OF NEGATIVE WORK</a></p>
-            </div>
-          </li>
-          <li markerlength="2" lo="9" lf="9">
-            <div class="block">
-              <p><a href="https://drive.google.com/drive/folders/1GI5c6CiWc6HCOUs6Rr0-gIHd38D3fbBJ">https://drive.google.com/drive/folders/1GI5c6CiWc6HCOUs6Rr0-gIHd38D3fbBJ</a></p>
-            </div>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
