--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
     }
 
     .solutionsfalse {
-      display: block;
+      display: none;
     }
 
     .solutionstrue {
-      display: none;
+      display: block;
     }
 
     .inline {
@@ -416,15 +416,6 @@
       .body {
         display: inline;
         position: relative;
-      }
-
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        break-before: page;
       }
 
       h1,
@@ -504,40 +495,6 @@
       }
     }
   </style>
-  <script>
-    function tocClickListen() {
-      // No jQuery b/c also used in stand-alone HTML.
-      let hs = document.querySelectorAll('#toc > ol ol');
-      let el, ns;
-      for (let i = 0; i < hs.length; i++) {
-        if (hs[i].previousElementSibling) {
-          el = hs[i].previousElementSibling.firstElementChild;
-          if (el.length == 0) {
-            continue;
-          }
-          el.addEventListener('click', event => {
-            ns = event.target.parentNode.nextElementSibling;
-            if (!ns) return;
-            if (nsns.style.display === 'none') {
-    ns.style.display = 'block';
-            }
-            else {
-    ns.style.display = 'none';
-            }
-          });
-        }
-      }
-    }
-    if (
-        document.readyState === "complete" ||
-        (document.readyState !== "loading" && 
-          !document.documentElement.doScroll)
-    ) {
-      tocClickListen();
-    } else {
-      document.addEventListener("DOMContentLoaded", tocClickListen);
-    }
-  </script>
 </head>
 
 <body class="body">
@@ -584,7 +541,7 @@
             </a>
           </li>
           <li>
-            <a href="#electric-potential" raw="## Electric Potential" lo="72" class="">
+            <a href="#electric-potential" raw="## Electric Potential" lo="72">
               <span class="toctext">Electric Potential</span>
             </a>
           </li>
@@ -594,8 +551,18 @@
             </a>
           </li>
           <li>
-            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="84" class="">
+            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="84">
               <span class="toctext">Kirchhoff’s Circuit Laws</span>
+            </a>
+          </li>
+          <li>
+            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="91">
+              <span class="toctext">Lorentz Force Law</span>
+            </a>
+          </li>
+          <li>
+            <a href="#solutions" raw="## Solutions" lo="97" class="">
+              <span class="toctext">Solutions</span>
             </a>
           </li>
         </ol>
@@ -792,7 +759,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class=""><a name="electric-potential" class="anchor hanchor" href="#electric-potential"><span class="hnumber">3.6</span>&nbsp;<span class="htext">Electric Potential</span></a></h2>
+        <h2><a name="electric-potential" class="anchor hanchor" href="#electric-potential"><span class="hnumber">3.6</span>&nbsp;<span class="htext">Electric Potential</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -840,7 +807,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class=""><a name="kirchhoff-s-circuit-laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">3.8</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
+        <h2><a name="kirchhoff-s-circuit-laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">3.8</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
       </div>
       <div class="block">
         <ul class="compact">
@@ -856,52 +823,109 @@
           </li>
           <li markerlength="2" lo="88" lf="88">
             <div class="block">
-              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws.md">Markdown</a> | </p>
+              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Kirchhoffs_Laws/Kirchhoffs_Laws.html" target="_blank">Markdown</a> | </p>
             </div>
           </li>
-          <li markerlength="2" lo="89" lf="92">
+          <li markerlength="2" lo="89" lf="91">
             <div class="block">
               <p>See also <a href="https://pressbooks.online.ucf.edu/osuniversityphysics2/chapter/kirchhoffs-rules/">Section 10.5 of University Physics Volume 2 by Ling et al.</a></p>
             </div>
           </li>
         </ul>
       </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2><a name="lorentz-force-law" class="anchor hanchor" href="#lorentz-force-law"><span class="hnumber">3.9</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+      </div>
+      <div class="block">
+        <ul class="compact">
+          <li markerlength="2">
+            <div class="block">
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Law/README.md">Instructor Notes</a> </p>
+            </div>
+          </li>
+          <li markerlength="2" lo="94" lf="94">
+            <div class="block">
+              <p>Document: | <a href="Lorentz_Force_Law/Lorentz_Force_Law.pdf">pdf</a> | <a href="Kirchhoffs_Laws/Lorentz_Force_Law-solutions.pdf">pdf solns</a> |</p>
+            </div>
+          </li>
+          <li markerlength="2" lo="95" lf="97">
+            <div class="block">
+              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Lorentz_Force_Law/Lorentz_Force_Law.html" target="_blank">Markdown</a> | </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 class=""><a name="solutions" class="anchor hanchor" href="#solutions"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Solutions</span></a></h2>
+      </div>
       <div class="block">
         <p class="">Solutions for the activities are</p>
       </div>
       <div class="block">
-        <p class=""><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
+        <p><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf</a>
         </p>
       </div>
       <div class="block">
-        <p class="">Because of Labor Day, you did not do the Continuous Charge Distributions activity.</p>
+        <p>The following are copies without solutions:</p>
       </div>
       <div class="block">
-        <p class="">These activites cover the basic mathematical concepts that you need in order to solve problems. In my experience, these problems cover the minimal set of concepts and calculations that you’ll need to be good at to pass an exam.</p>
-      </div>
-      <div class="block">
-        <p class="">If you had difficulty, read the solution and then try to solve the problem on your own without referencing the solution. Repeat as needed. The following are copies without solutions:</p>
-      </div>
-      <div class="block">
-        <p class=""><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf</a>
+        <p><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf</a>
           <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf</a>
           <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf</a>
         </p>
-      </div>
-      <div class="block">
-        <p class="">Dr. Weigel</p>
       </div>
     </div>
   </div>
+  <script>
+    function tocClickListen() {
+      // No jQuery b/c also used in stand-alone HTML.
+      let hs = document.querySelectorAll('#toc > ol ol');
+      let el, ns;
+      for (let i = 0; i < hs.length; i++) {
+        if (hs[i].previousElementSibling) {
+          el = hs[i].previousElementSibling.firstElementChild;
+          if (el.length == 0) {
+            continue;
+          }
+          el.addEventListener('click', event => {
+            ns = event.target.parentNode.nextElementSibling;
+            if (!ns) return;
+            if (ns.style.display === 'none') {
+    ns.style.display = 'block';
+            }
+            else {
+    ns.style.display = 'none';
+            }
+          });
+        }
+      }
+    }
+    if (
+        document.readyState === "complete" ||
+        (document.readyState !== "loading" && 
+          !document.documentElement.doScroll)
+    ) {
+      tocClickListen();
+    } else {
+      document.addEventListener("DOMContentLoaded", tocClickListen);
+    }
+  </script>
 </body>
 
 </html>
