--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
     }
 
     .solutionsfalse {
-      display: none;
+      display: block;
     }
 
     .solutionstrue {
-      display: block;
+      display: none;
     }
 
     .inline {
@@ -561,7 +561,12 @@
             </a>
           </li>
           <li>
-            <a href="#solutions" raw="## Solutions" lo="97" class="">
+            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="97" class="">
+              <span class="toctext">Lorentz Force Law on Wires</span>
+            </a>
+          </li>
+          <li>
+            <a href="#solutions" raw="## Solutions" lo="103" class="">
               <span class="toctext">Solutions</span>
             </a>
           </li>
@@ -842,17 +847,17 @@
         <ul class="compact">
           <li markerlength="2">
             <div class="block">
-              <p><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Law/README.md">Instructor Notes</a> </p>
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force/README.md">Instructor Notes</a> </p>
             </div>
           </li>
           <li markerlength="2" lo="94" lf="94">
             <div class="block">
-              <p>Document: | <a href="Lorentz_Force_Law/Lorentz_Force_Law.pdf">pdf</a> | <a href="Kirchhoffs_Laws/Lorentz_Force_Law-solutions.pdf">pdf solns</a> |</p>
+              <p>Document: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> |</p>
             </div>
           </li>
           <li markerlength="2" lo="95" lf="97">
             <div class="block">
-              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Kirchhoffs_Laws">Github</a> | <a href="Lorentz_Force_Law/Lorentz_Force_Law.html" target="_blank">Markdown</a> | </p>
+              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force_Law/Lorentz_Force_Law.html" target="_blank">Markdown</a> | </p>
             </div>
           </li>
         </ul>
@@ -860,13 +865,37 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class=""><a name="solutions" class="anchor hanchor" href="#solutions"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Solutions</span></a></h2>
+        <h2 class=""><a name="lorentz-force-law-on-wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">3.10</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+      </div>
+      <div class="block">
+        <ul class="compact">
+          <li markerlength="2">
+            <div class="block">
+              <p><a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires/README.md">Instructor Notes</a> </p>
+            </div>
+          </li>
+          <li markerlength="2" lo="100" lf="100">
+            <div class="block">
+              <p>Document: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a> |</p>
+            </div>
+          </li>
+          <li markerlength="2" lo="101" lf="103">
+            <div class="block">
+              <p>Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.html" target="_blank">Markdown</a> | </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 class=""><a name="solutions" class="anchor hanchor" href="#solutions"><span class="hnumber">3.11</span>&nbsp;<span class="htext">Solutions</span></a></h2>
       </div>
       <div class="block">
         <p class="">Solutions for the activities are</p>
       </div>
       <div class="block">
-        <p><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
+        <p class="added"><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf</a>
           <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a>
@@ -874,6 +903,8 @@
           <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf</a>
           <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force-solutions.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force_Wires-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force_Wires-solutions.pdf</a>
         </p>
       </div>
       <div class="block">
@@ -888,6 +919,8 @@
           <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf</a>
           <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
           <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force.pdf</a>
+          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force_Wires.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Lorentz_Force_Wires.pdf</a>
         </p>
       </div>
     </div>
